--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "babel-jest": "^28.1.1",
+    "cross-fetch": "^3.1.5",
+    "jest": "^28.1.1",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.1",
+    "react-testing-library": "^8.0.1",
     "vite": "^2.9.9"
   }
 }
